--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -532,9 +532,9 @@ def get_count_7d_txns(
 
 #### Projections & Filters
 
-Chalk has support for [time windowed aggregations](/docs/window-functions)
+Chalk has support for [time windows](/docs/time#time-filtering-in-resolvers)
 using the `before` and `after` functions.
-In the resolvers above, we use the [`after`](/docs/window-functions#after) operator to
+In the resolvers above, we use the [`after`](/docs/time#examples) operator to
 filter the transactions by the `created_at` field.
 
 Additionally, since we don't need to resolve all the features on `Authorization`
