--- a/faq.mdx
+++ b/faq.mdx
@@ -70,7 +70,7 @@ The first is a feature annotation `FeatureTime` that serves as a `datetime.datet
 The second is that if you define a feature named `ts` with a type of `datetime.datetime` in a feature class, then it will
 be treated as a feature time. You can override the feature time by supplying values for the `ts` feature if you
 would like to use the timestamps from your existing data sources as the observation timestamps for the feature.
-For more information on how feature times work, [see here](/docs/time).
+For more information on how feature times work, see our [time documentation](/docs/time).
 
 ### How should I structure my windowed features? What kind of windows can I use?
 
