--- a/backfilling-data.mdx
+++ b/backfilling-data.mdx
@@ -13,7 +13,7 @@ If you need to ingest historical feature data from bulk data sources (i.e. a dat
 use Chalk's support for "feature timestamping". This functionality allows you to override the default timestamps
 on the ingested feature values.
 
-First, define a [`[FeatureTime`]](/docs/time) feature for the relevant feature class:
+First, define a [`FeatureTime`](/docs/time) feature for the relevant feature class:
 
 ```py
 @features
