--- a/feature-versions.mdx
+++ b/feature-versions.mdx
@@ -117,6 +117,6 @@ def fn2(d: Trial.raw_data) -> Trial.code @ 2:
 Only scalar features can be versioned.  Other kinds of
 features cannot be versioned. These include:
 * `has_one` and `has_many`
-* `feature_time` 
+* `FeatureTime` 
 * `Windowed`
 * `Primary`
