--- a/temporal-consistency.mdx
+++ b/temporal-consistency.mdx
@@ -90,7 +90,7 @@ dataset = ChalkClient().offline_query(
 )
 ```
 
-This query will return a [Dataset](/docs/dataset) with temporally consistent values for each input time.
+This query will return a [Dataset](/docs/datasets) with temporally consistent values for each input time.
 
 ## Scenario 2: Backfilling new features
 
