add output_ts column name

--- a/time.mdx
+++ b/time.mdx
@@ -263,8 +263,10 @@ where air_date < ${now}
 
 ### Accessing query time in query output
 
-You may find it more convenient to access query time when it is correlated with the rows of your DataFrame. To have
-Chalk include query time as a column in your DataFrame, use [`output_ts`](/api-docs#ChalkClient.sample.output_ts).
+You may find it more convenient to access query time when it is correlated with the rows of your output DataFrame. To
+have Chalk include query time in your output DataFrame, use [`output_ts`](/api-docs#ChalkClient.sample.output_ts).  If
+you pass `output_ts=True`, query time will be accessible in a column named `__chalk__.CHALK_TS`. You may pass a string
+to output_ts to provide a name for the column.
 
 ## Timezone handling for naive datetimes
 Chalk stores UTC as the timezone for naive datetime objects. Additionally, Chalk assumes UTC if retrieving naive
