--- a/has-many.mdx
+++ b/has-many.mdx
@@ -156,8 +156,11 @@ def get_actor_in_movie(a_id: Actor.id, movie_ids: Actor.movie_ids) -> Actor.appe
 
 ```
 
-With the joining feature class, you can query for movie features from the actor namespace. For example, if you wanted to
-get the titles of the movies an actor appears in, you could run the following query:
+The joining feature class lets you:
+- query for movie features from the `Actor` namespace, and
+- use movie features in downstream `Actor` resolvers.
+
+For example, if you wanted to get the titles of the movies an actor appears in, you could run the following query:
 
 ```sh
 chalk query --in actor.id=1 --out actor.appearances.movie.title
