fix absurdly passive phrasing

--- a/has-many.mdx
+++ b/has-many.mdx
@@ -102,8 +102,8 @@ relationship from our example, add a `User` to the `Transfer` class:
 ### Many-to-many
 
 The recommended way to define a many-to-many relationship is through a joining feature class.
-For instance, if you were defining a many-many relationship between `Actors` and `Movies`, you
-would define something like:
+For instance, to define a many-many relationship between `Actors` and `Movies`, you
+could write the following feature classes:
 
 ```python
 from chalk.features import features, DataFrame
