--- a/has-many.mdx
+++ b/has-many.mdx
@@ -159,7 +159,7 @@ The joining feature class lets you:
 - query for movie features from the `Actor` namespace, and
 - use movie features in downstream `Actor` resolvers.
 
-For example, if you wanted to get the titles for all the movies that an actor has appeared in, you could run the following query:
+For example, to get the titles for all the movies that an actor has appeared in, you can run the following query:
 
 ```sh
 chalk query --in actor.id=1 --out actor.appearances.movie.title
