--- a/has-many.mdx
+++ b/has-many.mdx
@@ -134,9 +134,7 @@ class ActorInMovie:
   Here you need to use quotes around `DataFrame[ActorInMovie]` to use a forward reference.
 </TipInfo>
 
-This joining feature class can either by populated by:
-
-A SQL Resolver
+This joining feature class can be populated by a SQL file resolver:
 ```sql
 -- resolves: ActorInMovie
 -- source: PG
